--- a/spa-change-theme/src/styles.scss
+++ b/spa-change-theme/src/styles.scss
@@ -3,20 +3,21 @@
 $useLatestStyles: true;
 @import '@spartacus/styles';
 @import '@spartacus/styles/scss/theme/santorini';
-//@import './styles/spartacus/custom/index';
+@import './styles/spartacus/custom/index'; //TODO: Import custom index file here
 
 // $styleVersion: 4.3;
 // @import '~@spartacus/styles/index';
 
 /**
+TODO:
 There are two ways to change style
 1. chnage the global variable
 2. add a specific rule
 **/
-// body {
-//     --cx-color-primary: #ED7206;
-//     --cx-color-dark: #0F8B9D;
-//     --cx-color-secondary: #48B6B1;
-// }
+body {
+    --cx-color-primary: #ED7206;
+    --cx-color-dark: #0F8B9D;
+    --cx-color-secondary: #48B6B1;
+}
 
 
